syntax = "proto3";

package user;

option go_package = "src/proto";

service UserService {
  rpc FindOne(FindOneUserRequest) returns (FindOneUserResponse){}
  rpc FindByStudentID(FindByStudentIDUserRequest) returns(FindByStudentIDUserResponse) {}
  rpc Create(CreateUserRequest) returns (CreateUserResponse){}
  rpc Update(UpdateUserRequest) returns (UpdateUserResponse){}
  rpc Verify(VerifyUserRequest) returns (VerifyUserResponse){}
  rpc Delete(DeleteUserRequest) returns (DeleteUserResponse){}
  rpc CreateOrUpdate(CreateOrUpdateUserRequest) returns (CreateOrUpdateUserResponse){}
}

message User{
  string id = 1;
  string title = 2;
  string firstname = 3;
  string lastname = 4;
  string nickname = 5;
  string studentID = 6;
  string faculty = 7;
  string year = 8;
  string phone = 9;
  string lineID = 10;
  string email = 11;
  string allergyFood = 12;
  string foodRestriction = 13;
  string allergyMedicine = 14;
  string disease = 15;
  string imageUrl = 16;
  bool canSelectBaan = 17;
  bool isVerify = 18;
}

// FindOne

message FindOneUserRequest{
  string id = 1;
}

message FindOneUserResponse{
  User user = 1;
}

// Find By Student ID

message FindByStudentIDUserRequest{
  string studentId = 1;
}

message FindByStudentIDUserResponse{
  User user = 1;
}

// Create

message CreateUserRequest{
  User user = 1;
}

message CreateUserResponse{
  User user = 1;
}

// Update

message UpdateUserRequest{
  User user = 1;
}

message UpdateUserResponse{
  User user = 1;
}

// Delete

message DeleteUserRequest{
  string id = 1;
}

message DeleteUserResponse{
  bool success = 1;
}

// Create or Update

message CreateOrUpdateUserRequest{
  User user = 1;
}

message CreateOrUpdateUserResponse{
  User user = 1;
}

// Verify

message VerifyUserRequest{
  string studentId = 1;
}

message VerifyUserResponse{
  bool success = 1;
}